base config and additional config

--- a/etc/take2systembot/aorichan.conf.sample
+++ b/etc/take2systembot/aorichan.conf.sample
@@ -1,3 +1,7 @@
 [default]
-channel = hoge
-commands = test,set_iksm
+token = huga
+
+[splatoon]
+iksmchannel = channel1
+workchannels = channel2,channel3
+commands = test,gachi
